# pystellibs

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  LICENSE  README.rst  __init__.py  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyproject.toml  pystellibs.ezunits.html  pystellibs.future.html  pystellibs.html  pystellibs.interpolator.html  requirements.txt  search.html  searchindex.js  setup.py
.github/workflows/: doc.yml
_modules/: index.html
_modules/pystellibs/: basel.html  btsettl.html  elodie.html  ezunits.html  helpers.html  interpolator.html  kurucz.html  marcs.html  munari.html  pbar.html  rauch.html  simpletable.html  stellib.html  tlusty.html
_modules/pystellibs/ezunits/: pint.html
_modules/pystellibs/interpolator/: interpolator.html  lejeune.html  ndlinear.html
_sources/: index.rst.txt  modules.rst.txt  pystellibs.interpolator.rst.txt  pystellibs.rst.txt
docs/: Makefile  conf.py  example.py  index.rst  pystellibs.ezunits.rst  pystellibs.future.rst  pystellibs.rst
docs/source/: pystellibs.interpolator.rst  pystellibs.rst
docs_old/: Makefile  conf.py  example.py  figrc.py  index.rst  requirements.txt  setup_mpl.py
pystellibs/: __init__.py  astropy_units.py  basel.py  btsettl.py  config.py  elodie.py  ezmap.py  helpers.py  kurucz.py  marcs.py  munari.py  rauch.py  simpletable.py  stellib.py  tlusty.py
pystellibs/ezunits/: default_en.txt  pint.py
pystellibs/future/: __init__.py  path.py
pystellibs/interpolator/: README.rst  __init__.py  interpolator.py  lejeune.py  ndlinear.py
src/pystellibs/: __init__.py  astropy_units.py  basel.py  btsettl.py  config.py  elodie.py  grid.py  kurucz.py  marcs.py  munari.py  rauch.py  simpletable.py  stellib.py  tlusty.py
src/pystellibs/interpolator/: __init__.py  interpolator.py  lejeune.py  ndlinear.py
src/pystellibs/libs/: README.md  stellib_Rauch.grid.fits
unittests/: test_basics.py
