[project]
name = "pystellibs"
version = "1.0.0"
description = "Making synthetic spectra from libraries"
readme = "README.rst"
requires-python = ">=3.9"
dependencies = [
    "numpy>1.6",
    "scipy>0.9",
    "astropy>5.0",
    "pandas>2.0",
    "matplotlib>=3.9.4",
]
authors = [{name="Morgan Fouesneau"}]
classifiers=[
      'Intended Audience :: Science/Research',
      'Operating System :: OS Independent',
      'Programming Language :: Python :: 3',
      'License :: OSI Approved :: MIT License',
      'Topic :: Scientific/Engineering :: Astronomy'
      ]

[build-system]
requires = ["setuptools>=60",
            "setuptools-scm>=6.2",
            "wheel",
            ]
build-backend = "setuptools.build_meta"

[tool.setuptools]
# By default, include-package-data is true in pyproject.toml, so you do
# NOT have to specify this line.
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]                 # list of folders that contain the packages (["."] by default)
include = ["pystellibs*"]         # package names should match these glob patterns (["*"] by default)
exclude = ["unittests"]       # exclude packages matching these glob patterns (empty by default)
namespaces = true             # to disable scanning PEP 420 namespaces (true by default)

[tool.setuptools.package-data]
pystellibs = ['*.fits', '*.txt', 'libs/**']

[project.optional-dependencies]

docs = [
  "sphinx>=5.3",
  "sphinx-book-theme>=0.3.3",
  "sphinx-automodapi>=0.14",
  "sphinx_copybutton>=0.5",
  "sphinx-mdinclude>=0.6",
  "sphinxcontrib-htmlhelp>=2.1.0",
  "sphinxcontrib-serializinghtml>=2.0.0",
  "sphinx-tabs>=3.0",
  "myst-nb>=0.16.0",
  "sphinx-design>=0.6",
  # for syntax highlighting (https://nbsphinx.readthedocs.io/en/0.8.0/installation.html#Pygments-Lexer-for-Syntax-Highlighting)
  "IPython>=8.0",
  "matplotlib",
  "numpydoc"]

ci = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "codecov>=2.0",
  "pre-commit>=2.20",
]
